<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="50dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:weightSum="11">

        <TextView
            android:textColor="@color/blue_3"
            android:layout_width="80dp"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:layout_marginEnd="10dp"

            android:ellipsize="end"

            android:layout_weight="1"

            android:fontFamily="@font/esamanru_light"
            android:gravity="center"
            android:maxLines="2"
            android:textSize="13sp"
            android:text="@string/attendance_table_column_1"/>

        <TextView
            android:textColor="@color/black"
            android:layout_width="20dp"
            android:layout_height="wrap_content"

            android:layout_gravity="center"

            android:ellipsize="end"

            android:layout_weight="2"

            android:fontFamily="@font/esamanru_light"
            android:gravity="center"
            android:singleLine="true"
            android:textSize="13sp"
            android:text="@string/attendance_table_column_2"/>

        <TextView
            android:textColor="@color/black"
            android:layout_width="20dp"
            android:layout_height="wrap_content"

            android:layout_gravity="center"

            android:ellipsize="end"

            android:layout_weight="2"

            android:fontFamily="@font/esamanru_light"
            android:gravity="center"
            android:singleLine="true"
            android:textSize="13sp"
            android:text="@string/attendance_table_column_3"/>

        <TextView
            android:textColor="@color/black"
            android:layout_width="20dp"
            android:layout_height="wrap_content"

            android:layout_gravity="center"


            android:ellipsize="end"

            android:layout_weight="2"

            android:fontFamily="@font/esamanru_light"
            android:gravity="center"
            android:singleLine="true"
            android:textSize="13sp"
            android:text="@string/attendance_table_column_4"/>

        <TextView
            android:textColor="@color/black"
            android:layout_width="20dp"
            android:layout_height="wrap_content"

            android:layout_gravity="center"

            android:ellipsize="end"

            android:layout_weight="2"

            android:fontFamily="@font/esamanru_light"
            android:gravity="center"
            android:singleLine="true"
            android:textSize="13sp"
            android:text="@string/attendance_table_column_5"/>

        <TextView
            android:textColor="@color/black"
            android:layout_width="20dp"
            android:layout_height="wrap_content"

            android:layout_gravity="center"

            android:ellipsize="end"

            android:layout_weight="2"

            android:fontFamily="@font/esamanru_light"
            android:gravity="center"
            android:singleLine="true"
            android:textSize="13sp"
            android:text="@string/attendance_table_column_6"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>