<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/mainLayout"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/white"

    android:orientation="vertical"

    android:weightSum="3">




    <!--============================================-->
    <!--================ View Pager ================-->
    <!--============================================-->
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/mainViewPager"

        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:background="@null"

        android:layout_weight="3" />
    <!--============================================-->
    <!--============================================-->
    <!--============================================-->




    <!--============================================-->
    <!--================ Tab layout ================-->
    <!--============================================-->
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/mainTabLayout"

        style="@style/customTabLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"


        android:visibility="gone"

        android:layout_weight="0"

        app:tabTextAppearance="@style/customTabLayoutStyle">


        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/attendance"

            android:icon="@drawable/ic_baseline_school_24"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/search"

            android:icon="@drawable/ic_baseline_search_24"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/class_management"

            android:icon="@drawable/ic_baseline_people_24"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/setting"

            android:icon="@drawable/ic_baseline_settings_24"/>
    </com.google.android.material.tabs.TabLayout>
    <!--============================================-->
    <!--============================================-->
    <!--============================================-->
</androidx.appcompat.widget.LinearLayoutCompat>